package messaging;

public interface Message {
    void send();
}
